# media-engine

./: .gitignore  .markdownlint.json  Batch.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.server  LICENSE.txt  MAINTAINERS.md  Makefile  NOTICE.md  README.md  SECURITY.md  USAGE.md  block-core-changes.yml  clippy.toml  deploy.sh  dev-environment-setup.sh  docker-compose.yml  generator_image.py  generator_video.py  image.aimg  input.json  install.ps1  install.sh  justfile  pre-commit-config.yaml  release.sh  rust-toolchain.toml  taplo.toml  test.aaud  test_audio.aaud  test_image.aimg  test_video_10sec.avid  view_aimf.sh  view_media.sh
.cargo-husky/hooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  auto-close-core-prs.yml  ci.yml  lock-core.yml  publish-python.yml  release.yml  security-audit.yml  verify-assets.yml
aimf_core/: Cargo.toml  README.md
aimf_core/src/: container.rs  error.rs  frame.rs  hash.rs  lib.rs  metadata.rs  signature.rs
cargo/: config.toml
codecs/audio_codec/: Cargo.toml
codecs/audio_codec/src/: lib.rs
codecs/image_codec/: Cargo.toml
codecs/image_codec/src/: lib.rs
codecs/video_codec/: Cargo.toml
codecs/video_codec/src/: lib.rs
commands/: Cargo.toml
commands/src/: batch.rs  common.rs  create.rs  extract.rs  genkey.rs  info.rs  json_input.rs  json_input.txt  lib.rs  raw.rs  sign.rs  traits.rs  utils.rs  verify.rs  view.rs
commands/src/detectors/: media_detector.rs  mod.rs
commands/src/parsers/: audio.rs  image.rs  mod.rs  video.rs
docs/: API.md  ARCHITECTURE.md  BEST_PRACTICES.md  COMPANIES.md  FAQ.md  GLOSSARY.md  IANA-APPLICATION.md  MIME.md  README.md  ROADMAP.md  SCHEMA.md  VISION.md  WORKFLOWS.md
examples/: Cargo.toml  demo.sh
examples/src/: ai_generate_audio.rs  ai_generate_image.rs  ai_generate_raw_video.rs  ai_generate_video.rs  ai_generate_video_simple.rs  batch_csv.rs  batch_mixed.rs  batch_similar.rs  generate_audio.rs  generate_image.rs  generate_long_video.rs  generate_universal.rs  generate_video.rs
media_engine_core/: Cargo.toml  README.md
media_engine_core/src/: container.rs  hash.rs  lib.rs  metadata.rs  validation.rs
npm-package/: package.json
npm-package/scripts/: install-aimf.js
pip-package/: README.md  setup.py
pip-package/aimf/: __init__.py  __main__.py  audio.py  binary.py  binary_installer.py  core.py  extract.py  image.py  verify.py  video.py
pip-package/aimf_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
platform/: WORKFLOW.md
platform/android/: AndroidManifest.xml
platform/android/etc/permissions/: aimf.xml
platform/electron/: aimf-mime.js
platform/flutter/: aimf_mime.dart
platform/flutter/file_picker/: file_picker.dart
platform/ios/: AIMF.uttype  Info.plist  README.md
platform/react-native/: aimf-mime.js
platform/scripts/: install-mime-macos.sh  install-mime.ps1  install-mime.sh  uninstall-mime.sh  validate-docs.sh  verify-complete-setup.sh
platform/web/: aimf-mime.ts  index.html  manifest.json  sw.js
platform/web/.well-known/: aimf-mime.json
python/: setup.py
python-examples/: audio_generation.py  batch_audio.py  batch_mixed.py  batch_similar.py  csv_batch.py  image_generation.py  run_all.py  run_tiny_examples.py  simple_test.py  tiny_audio.py  tiny_image.py  tiny_video.py  verify_example.py  verify_one.py  verify_three.py  verify_two.py  video_generation.py
python/aimf/: __init__.py
server/: main.rs
services/batch/: Cargo.toml
services/batch/src/: lib.rs
services/common/: Cargo.toml
services/common/src/: lib.rs  progress.rs
services/ingestion/: Cargo.toml
services/ingestion/src/: lib.rs
services/signing/: Cargo.toml
services/signing/src/: lib.rs
services/streaming/: Cargo.toml
services/streaming/src/: lib.rs
services/validation/: Cargo.toml
services/validation/src/: lib.rs
share/applications/: aimf-viewer.desktop
share/uti/: Info.plist  aimf.uttype
spec/: README.md  aaud.md  ai-media-format.md  aimf.md  aimg.md  avid.md
tests/: aimf_tests.rs
tools/aaud-cli/: Cargo.toml
tools/aaud-cli/src/: lib.rs  main.rs
tools/aimf-bundle/: Cargo.toml
tools/aimf-bundle/src/: main.rs
tools/aimf-cli/: Cargo.toml
tools/aimf-cli/examples/: ai_generate_audio.rs  ai_generate_video.rs  ai_generate_video_simple.rs
tools/aimf-cli/src/: lib.rs  main.rs
tools/aimg-cli/: Cargo.toml
tools/aimg-cli/src/: lib.rs  main.rs
tools/avid-cli/: Cargo.toml
tools/avid-cli/src/: lib.rs  main.rs
tools/cli/: Cargo.toml
tools/cli-common/: Cargo.toml
tools/cli-common/src/: lib.rs
tools/cli/examples/: ai_generate_audio.rs  ai_generate_image.rs  ai_generate_video.rs  ai_generate_video_simple.rs
tools/cli/src/: main.rs
