[workspace]
members = [
    "media_engine_core",
    "codecs/image_codec",
    "codecs/audio_codec",
    "codecs/video_codec",
    "tools/cli"
]
resolver = "2"
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
image = "0.25"
hound = "3.5"
thiserror = "2"

#clap = { version = "4.0", features = ["derive"] }
#image = "0.25"
#serde_json = "1.0"
#hound = "3.5"
#thiserror = "2"
#anyhow = "1.0"