[workspace]
members = [
    "media_engine_core",
    "codecs/image_codec",
    "codecs/audio_codec",
    "codecs/video_codec",
    "tools/aaud-cli",        # paid audio
    "tools/aimf-cli",        # free
    "tools/aimg-cli",        # paid image  
    "tools/avid-cli",        # paid video
]
resolver = "2"
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
image = "0.25"
ffmpeg-sidecar = "1.2.0"  # Auto-downloads FFmpeg binary
once_cell = "1.19"  # For stable Rust instead of OnceLock
hound = "3.5"
thiserror = "2"
pyo3 = "0.21"  # Add this for Python bindings
hex = "0.4"
tempfile = "3.8"

#clap = { version = "4.0", features = ["derive"] }
#image = "0.25"
#serde_json = "1.0"
#hound = "3.5"
#thiserror = "2"
#anyhow = "1.0"