[workspace]
members = [

    "aimf_core",
    "codecs/image_codec",
    "codecs/audio_codec",
    "codecs/video_codec",
    "tools/aaud-cli",        
    "tools/aimf-cli",       
    "tools/aimg-cli",        
    "tools/avid-cli",        
    "tools/cli-common",        
  
    "services/common",               # NEW: Business logic layer
    "services/ingestion",          # Input parsing & detection
    "services/validation",         # Format & content validation
    "services/signing",            # Cryptographic operations
    "services/streaming",          # Large file handling
    "services/batch",             # Batch processing logic
    "commands",
    "examples",

]
resolver = "2"
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
image = "0.25"
ffmpeg-sidecar = "1.2.0"  # Auto-downloads FFmpeg binary
once_cell = "1.19"  # For stable Rust instead of OnceLock
hound = "3.5"
thiserror = "2"
pyo3 = "0.21"  # Add this for Python bindings
hex = "0.4"
tempfile = "3.8"
indicatif = "0.17"
rayon = "1.8"
glob = "0.3"
uuid = { version = "1.6", features = ["v4"], }
chrono = { version = "0.4", features = ["serde","clock"]}

# Async
tokio = { version = "1.52.3", features = ["full"]}
async-trait = "0.1"
futures = "0.3"

sha2 = "0.10"

#clap = { version = "4.0", features = ["derive"] }
#image = "0.25"
#serde_json = "1.0"
#hound = "3.5"
#thiserror = "2"
#anyhow = "1.0"