[package]
name = "aimf_core"
version = "0.1.0"
edition = "2024"

description = "Core library for AI Media Format (AIMF) - container format for AI-generated media"
license = "Apache-2.0"
authors = ["AI MEDIA FORMAT CONTRIBUTORS <aimediaformat@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"
homepage = "https://aimf.io"
documentation = "https://docs.aimf.io"
keywords = ["ai", "media", "format", "container", "metadata"]
categories = ["multimedia", "encoding"]

[dependencies]
serde_cbor = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror= { workspace = true }
sha2= { workspace = true }
# Add this for signatures
ed25519-dalek = { workspace = true }
rand = { workspace = true }