[package]
name = "media_engine_core"
version = "0.1.0"
edition = "2024"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2"
anyhow = "1.0"        # easy error propagation (optional)
byteorder = "1.5"     # read/write bytes safely

# Add this for signatures
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"