[package]
name = "aimf_audio_codec"
version = "1.0.0"
edition = "2024"
description = "Codec for AIMF audio format"
license = "Apache-2.0"
authors = ["AI MEDIA FORMATS CONTRIBUTORS <aimediaformat@gmail.com, aimediaformats@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"

[dependencies]
aimf_core = { path = "../../aimf_core", version = "1.0.0"}
thiserror = { workspace = true }
anyhow = { workspace = true }
hound = { workspace = true }
hex = { workspace = true }
id3 = "1.16.4"

