[package]
name = "aimf_image_codec"
version = "1.0.0"
edition = "2024"
description = "Codec for AIMF image format"
license = "Apache-2.0"
authors = ["AI MEDIA FORMATS CONTRIBUTORS <aimediaformat@gmail.com, aimediaformats@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"

[dependencies]
aimf_core = { path = "../../aimf_core", version = "1.0.0"}
anyhow = { workspace = true }
hound = { workspace = true }
thiserror = { workspace = true }
png = { workspace = true }
crc32fast = "1.3"  # Add this for CRC calculation
