[package]
name = "aimf_video_codec"
version = "0.1.0"
edition = "2024"
description = "Codec for AIMF video format"
license = "Apache-2.0"
authors = ["AI MEDIA FORMAT CONTRIBUTORS <aimediaformat@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"

[dependencies]
aimf_core = { path = "../../aimf_core", version = "0.1.0"}
hex = { workspace = true }
thiserror = { workspace = true }
