# media-engine/services/batch/Cargo.toml
[package]
name = "media-engine-batch"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["AI MEDIA FORMATS CONTRIBUTORS <aimediaformat@gmail.com, aimediaformats@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"

[dependencies]
anyhow ={workspace=true}
glob = {workspace=true}
tempfile = {workspace=true}