# media-engine/services/ingestion/Cargo.toml
[package]
name = "media-engine-ingestion"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["AI MEDIA FORMATS CONTRIBUTORS <aimediaformat@gmail.com, aimediaformats@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"

[dependencies]
anyhow = {workspace=true}
serde_json = {workspace=true}
serde = {workspace=true}