# media-engine/services/signing/Cargo.toml
[package]
name = "media-engine-signing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow ={workspace=true}
aimf_core = { path = "../../aimf_core", version = "0.1.0"}
ed25519-dalek = {workspace=true}
rand = {workspace=true}
sha2 = {workspace=true}
hex = {workspace=true}