# media-engine/services/signing/Cargo.toml
[package]
name = "media-engine-signing"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["AI MEDIA FORMATS CONTRIBUTORS <aimediaformat@gmail.com, aimediaformats@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"

[dependencies]
anyhow ={workspace=true}
aimf_core = { path = "../../aimf_core", version = "1.0.0"}
ed25519-dalek = {workspace=true}
rand = {workspace=true}
sha2 = {workspace=true}
hex = {workspace=true}