# tools/aaud-cli/Cargo.toml (audio tool)
[package]
name = "aimf-audio-cli"
version = "0.1.0"
edition = "2024"

description = "AAUD - AI Audio Format container (audio-only)"
license = "Apache-2.0"
authors = ["AI MEDIA FORMAT CONTRIBUTORS <aimediaformat@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"
keywords = ["ai", "audio", "format", "container"]

[[bin]]
name = "aaud"
path = "src/bin/aaud.rs"


[dependencies]
aimf_core = { path = "../../media_engine_core", version = "0.1.0"}
aimf_audio_codec = { path = "../../codecs/audio_codec", version = "0.1.0"}


clap = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
hound = { workspace = true }
hex = { workspace = true }