[package]
name = "aimf"
version = "0.1.0"
edition = "2024"
description = "AIMF - Complete AI Media Format tools (includes aimf, aaud, aimg, avid)"
license = "Apache-2.0"
authors = ["AI MEDIA FORMAT CONTRIBUTORS <aimediaformat@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"

[dependencies]
aimf-cli = { path = "../aimf-cli", version = "0.1.0"}
aimf-audio-cli = { path = "../aaud-cli", version = "0.1.0"}
aimf-image-cli = { path = "../aimg-cli", version = "0.1.0"}
aimf-video-cli = { path = "../avid-cli", version = "0.1.0"}