# tools/aimf-cli/Cargo.toml (main tool)
[package]
name = "aimf-cli"
version = "1.0.0"
edition = "2024"
description = "AIMF - Universal AI Media Format container"
license = "Apache-2.0"
authors = ["AI MEDIA FORMATS CONTRIBUTORS <aimediaformat@gmail.com, aimediaformats@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"
homepage = "https://aimf.io"
documentation = "https://docs.aimf.io"
keywords = ["ai", "media", "format", "container", "metadata"]
categories = ["multimedia", "command-line-utilities"]



[[bin]]
name = "aimf"
path = "src/main.rs"


[lib]
name = "aimf_lib"
path = "src/lib.rs"

[dependencies]
aimf_core = { path = "../../aimf_core", version = "1.0.0"}
aimf_image_codec = { path = "../../codecs/image_codec", version = "1.0.0"}
aimf_audio_codec = { path = "../../codecs/audio_codec", version = "1.0.0"}
aimf_video_codec = { path = "../../codecs/video_codec", version = "1.0.0"}
media-engine-commands = { path = "../../commands", version = "1.0.0"}
cli-common = { path = "../cli-common", version = "1.0.0"}


clap = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
ffmpeg-sidecar = { workspace = true }