# tools/aimg-cli/Cargo.toml (image tool)  
[package]
name = "aimf-image-cli"
version = "1.0.0"
edition = "2024"
description = "AIMG - AI Image Format container (image-only)"
license = "Apache-2.0"
authors = ["AI MEDIA FORMATS CONTRIBUTORS <aimediaformat@gmail.com, aimediaformats@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"
keywords = ["ai", "image", "format", "container"]

[[bin]]
name = "aimg"
path = "src/main.rs"

[lib]
name = "aimg_lib"
path = "src/lib.rs"

[dependencies]
aimf_core = { path = "../../aimf_core", version = "1.0.0"}
aimf_image_codec = { path = "../../codecs/image_codec", version = "1.0.0"}
media-engine-commands = { path = "../../commands", version = "1.0.0"}
cli-common = { path = "../cli-common", version = "1.0.0"}

clap = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
hound = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }