# tools/avid-cli/Cargo.toml (video tool)
[package]
name = "aimf-video-cli"
version = "0.1.0"
edition = "2024"
description = "AVID - AI Video Format container (video-only)"
license = "Apache-2.0"
authors = ["AI MEDIA FORMAT CONTRIBUTORS <aimediaformat@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"
keywords = ["ai", "video", "format", "container"]

[[bin]]
name = "avid"
path = "src/bin/avid.rs"

[dependencies]
aimf_core = { path = "../../media_engine_core", version = "0.1.0"}
aimf_video_codec = { path = "../../codecs/video_codec", version = "0.1.0"}



clap = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
ffmpeg-sidecar = { workspace = true }
hound = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }