# tools/avid-cli/Cargo.toml (video tool)
[package]
name = "aimf-video-cli"
version = "1.0.0"
edition = "2024"
description = "AVID - AI Video Format container (video-only)"
license = "Apache-2.0"
authors = ["AI MEDIA FORMATS CONTRIBUTORS <aimediaformat@gmail.com, aimediaformats@gmail.com>"]
repository = "https://github.com/ai-mf/media-engine/"
keywords = ["ai", "video", "format", "container"]

[[bin]]
name = "avid"
path = "src/main.rs"

[lib]
name = "avid_lib"
path = "src/lib.rs"

[dependencies]
aimf_core = { path = "../../aimf_core", version = "1.0.0"}
aimf_video_codec = { path = "../../codecs/video_codec", version = "1.0.0"}
media-engine-commands = { path = "../../commands", version = "1.0.0"}
cli-common = { path = "../cli-common", version = "1.0.0"}



clap = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
ffmpeg-sidecar = { workspace = true }
hound = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }