[package]
name = "cli"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "aimg"
path = "src/bin/aimg.rs"

[[bin]]
name = "aaud"
path = "src/bin/aaud.rs"

[[bin]]
name = "avid"
path = "src/bin/avid.rs"

[[bin]]
name = "aimf"
path = "src/bin/aimf.rs"


[[example]]
name = "ai_generate_image"
path = "examples/ai_generate_image.rs"

[[example]]
name = "ai_generate_audio"
path = "examples/ai_generate_audio.rs"

[[example]]
name = "ai_generate_video"
path = "examples/ai_generate_video.rs"


[[example]]
name = "ai_generate_video_simple"
path = "examples/ai_generate_video_simple.rs"

[dependencies]
media_engine_core = { path = "../../media_engine_core" }
image_codec = { path = "../../codecs/image_codec" }
audio_codec = { path = "../../codecs/audio_codec" }
video_codec = { path = "../../codecs/video_codec" }

clap = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
hound = { workspace = true }
mp4 = "0.14"
tempfile = "3.8"

#clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
#image = "0.25"
#serde_json = "1.0"
#hound = "3.5"
#thiserror = "2"
#anyhow = "1.0"
